--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -27,12 +27,12 @@
       <tbody>
         <% orders.forEach(order => { %>
           <tr>
-            <td><%= order.name %></td>
+            <td><%= order.customer %></td>
             <td><%= order.email %></td>
             <td><%= order.flavor %></td>
-            <td><%= order.method %></td>
-            <td><%= order.name %></td>
-            <td><%= Array.isArray(order.toppings) ? order.toppings.join(", ") : order.toppings %></td>
+            <td><%= order.cone %></td>
+            <td><%= order.toppings %></td>
+            <td><%= order.comments %></td>
             <td><%= order.timestamp %></td>
           </tr>
         <% }) %>
